Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,9 @@ build:
 lint:
   stage: Lint 
   image: ${NODE_IMAGE}
-  script: yarn lint
+  script: 
+    - yarn
+    - yarn lint
 
 audit:
   stage: Audit
