--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,15 +7,41 @@ stages:
   - Test
   - Audit
 
+cache:
+  - key:
+     files:
+        - yarn.lock
+    paths: 
+      - node_modules/
+    policy: pull
+
+install:
+  stage: .pre
+  image: ${NODE_IMAGE}
+  cache:
+    - key: ${CI_JOB_NAME}
+      paths: 
+        - .npm/
+      when: on_success
+      policy: pull-push
+    
+    - key:
+       files:
+          - yarn.lock
+      paths: 
+        - node_modules/
+      policy: pull-push
+  script:
+    - yarn --cache-folder .npm
+
+  
+
 build:
   stage: Build
-  image: ${NODE_IMAGE}
-  before_script: yarn
   script: yarn build
-  cache:
-    key: cache-${CI_COMMIT_REF_SLUG}
+  artifacts:
     paths:
-      - node_modules
+      - dist/
 
 lint:
   stage: Lint
