Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,15 +46,18 @@ build:
 
 lint:
   stage: Lint
+  image: ${NODE_IMAGE}
   script:
     - yarn lint
 
 test:
   stage: Test
+  image: ${NODE_IMAGE}
   script:
     - yarn test
 
 audit:
   stage: Audit
+  image: ${NODE_IMAGE}
   script: yarn audit
   allow_failure: true
