--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   backend:
     build: .
     ports:
-      - '80:3000'
+      - '8080:3000'
   redis:
     image: 'redis:alpine'
+    ports:
+      - '6379:6379'
