--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --config ./test/jest.config.ts",
+    "test:services": "jest service.spec.ts --config ./test/jest.config.ts",
+    "test:controllers": "jest controller.spec.ts --config ./test/jest.config.ts",
     "test:watch": "jest --config ./test/jest.config.ts --watch",
     "test:cov": "jest --config ./test/jest.config.ts --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
